# Custom-Regex-Engine

./: .gitignore  README.md  pyproject.toml
regex_engine/: CMakeLists.txt  ast_code.py  nfa_core.py  parser_code.py  test_simulation.py
regex_engine/include/: AST.h  NFA.h  NfaBuilder.h  Parser.h  Simulator.h
regex_engine/src/: NfaBuilder.cpp  Parser.cpp  Simulator.cpp  main.cpp
regex_engine_py/: lexer_code.py  main.py  nfa_builder.py  nfa_core.py
regex_engine_python/: nfa_simulator.py
